Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-77391

QList integer precision warning on iOS

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.14.0 Alpha
    • 5.13.0
    • Core: Object Model
    • None
    • MacOS 10.14.4, Xcode 10.2.1
    • iOS/tvOS/watchOS
    • ffc2d5722317fcab86865b11491d7bf7fef3e16d (qt/qtbase/5.13)

    Description

      When compiling for iOS, I get 1000s issues that are all of the type "implicit conversion loses integer precision: 'long' to 'int'" for qlist.h, lines 1034 & 1166.

      Typically these are when qlist.h is included in another Qt class, such as QMap, QObject, QStringList, etc..

      See attached screenshot

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            thiago Thiago Macieira
            paulmasri Paul
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes