QList: fix some integer cast warnings from 64- to 32-bit

Not tested because we're not promising to fix them all. Just those two
that were reported.

Fixes: QTBUG-77391
Change-Id: Iec9c051acd73484c8d94fffd15b91f5e6348635d
Reviewed-by: Marc Mutz <marc.mutz@kdab.com>